Minor ui problems linked to buttons fixed

--- a/views/inc/candidate/applied.ejs
+++ b/views/inc/candidate/applied.ejs
@@ -7,21 +7,19 @@
     </figure>
     <div class="media-content">
         <div class="content">
-            <strong class="is-size-4"> 💼 Company Name</strong>
+            <p class="is-size-5">
+                <strong class="is-size-4"> 💼 Company Name</strong>
                 <span class="m-l-10 is-size-4">🗺</span>Location
                 <span class="m-l-10 is-size-4">💵</span> $30,000
                 <br>
                 <span class="is-size-4">👩‍💻👨‍💻</span> Javascript Developer<br>
+            </p>
         </div>
         <p class="is-pulled-left button is-text">Details</p>
-        <nav class="level is-mobile is-pulled-right">
-            <div class="level-left">
-                <a class="level-item button"><i class="fas fa-pen m-r-5"></i>Applied</a>
-                <a class="level-item">
-                    <span class="icon is-small"></i></span>
-                </a>
+            <div class="level-left is-pulled-right m-r-10">
+                <p class="level-item button"><i class="fas fa-pen m-r-5"></i>Applied</p>
             </div>
-        </nav>
+
     </div>
 </article>
 </div><!-- job listing-->
