--- a/views/inc/candidate/saved.ejs
+++ b/views/inc/candidate/saved.ejs
@@ -19,10 +19,8 @@
             <nav class="level is-mobile is-pulled-right">
                 <div class="level-left">
                     <a class="level-item button is-danger"><i class="fas fa-heart m-r-5"></i>Saved</a>
-                    <a class="level-item button is-success"><i class="fas fa-pen m-r-5"></i>Apply</a>
-                    <a class="level-item">
-                        <span class="icon is-small"></i></span>
-                    </a>
+                    <a class="level-item button is-success m-r-10"><i class="fas fa-pen m-r-5"></i>Apply</a>
+                   
                 </div>
             </nav>
         </div>
