--- a/views/inc/hirer-sidebar.ejs
+++ b/views/inc/hirer-sidebar.ejs
@@ -1,5 +1,5 @@
 <div class="column sidebar m-r-50">
-    <a class="button is-large is-fullwidth is-success m-t-20 m-b-20"><i class="fas fa-plus-circle m-r-10"></i>Add New Job</a>
+    <a href="/hirer/job/add" class="button is-large is-fullwidth is-success m-t-20 m-b-20"><i class="fas fa-plus-circle m-r-10"></i>Add New Job</a>
 
     <h3 class="title is-3">New Candidates</h1>
 
