--- a/views/hirer/profile.ejs
+++ b/views/hirer/profile.ejs
@@ -8,7 +8,7 @@
                 <h1 class="title is-1 profile-h1"> <%=user.firstName +' ' + user.lastName %></h1>
             </div>
             <div class="column">
-                <a class="button is-link is-pulled-right"><i class="fas fa-edit m-r-10"></i>Edit Profile</a>
+                <a href="/profile/edit" class="button is-link is-pulled-right"><i class="fas fa-edit m-r-10"></i>Edit Profile</a>
             </div>
         </div>
 
