Updated tabs on hirer && candidate dashboards to use same function

--- a/views/candidate/dashboard.ejs
+++ b/views/candidate/dashboard.ejs
@@ -28,12 +28,12 @@
 
                 <div class="tabs is-toggle is-centered m-t-30">
                     <ul>
-                        <li class="is-active" id="saved-tab">
+                        <li class="is-active" id="tab1-tab">
                             <a>
                                 <span>❤️ Saved</span>
                             </a>
                         </li>
-                        <li id="applied-tab">
+                        <li id="tab2-tab">
                             <a >
                                 <span>📝 Applied</span>
                             </a>
@@ -41,10 +41,10 @@
                     </ul>
                 </div>
 
-                <div id="saved">
+                <div id="tab2-div">
                     <%- include('../inc/candidate/saved') %>
                 </div>
-                <div id="applied">
+                <div id="tab2-div">
                     <%- include('../inc/candidate/applied') %>
                 </div>
 
