--- a/views/hirer/dashboard.ejs
+++ b/views/hirer/dashboard.ejs
@@ -14,12 +14,12 @@
 
                 <div class="tabs is-toggle is-centered m-t-30">
                     <ul>
-                        <li class="is-active" id="applications-tab">
+                        <li class="is-active" id="tab1-tab">
                             <a>
                                 <span>❤️ Applications</span>
                             </a>
                         </li>
-                        <li id="jobs-listed-tab">
+                        <li id="tab2-tab">
                             <a>
                                 <span>📝 Jobs Listed</span>
                             </a>
@@ -27,10 +27,10 @@
                     </ul>
                 </div>
 
-                <div id="applications">
+                <div id="tab1-div">
                     <%- include('../inc/hirer/applications') %>
                 </div>
-                <div id="jobs-listed" style="display:none;">
+                <div id="tab2-div" style="display:none;">
                     <%- include('../inc/hirer/jobs-listed') %>
                 </div>
             </div> <!-- first column-->
