Updated community page

--- a/views/community.ejs
+++ b/views/community.ejs
@@ -11,13 +11,13 @@
             <div class="columns is-mobile m-t-30">
                 <div class="column is-two-fifths m-r-10">
                     <p class="subtitle is-4">
-                        <i class="fab fa-twitter fa-lg twitter m-r-20"></i><a href="#">Twitter</a>
+                        <i class="fab fa-twitter fa-lg twitter m-r-20"></i><a href="https://twitter.com/@nubeetech" target="_blank">Twitter</a>
                     </p>
                 </div>
                 
                 <div class="column is-two-fifths m-r-10">
                     <p class="subtitle is-4">
-                        <i class="fab fa-slack fa-lg  m-r-20 slack"></i><a href="#">Slack</a>
+                        <i class="fab fa-slack fa-lg  m-r-20 slack"></i><a href="https://join.slack.com/t/nubeetech/shared_invite/enQtNTA4Mjk0MDMwNzA5LWYyNjljZDc2ZmI3M2NlYmRkMzYwZDM1YzI2ZjRlZDRmNDBkNThjMjE0Nzc1MjY4YTM0NWI0NTUwZTY0ZjhjMzE" target="_blank">Slack</a>
                     </p>
                 </div>
                 <div class="column is-one-third"></div>
@@ -26,13 +26,13 @@
             <div class="columns is-mobile">
                 <div class=" column is-two-fifths m-r-10">
                     <p class="subtitle is-4">
-                        <i class="fab fa-discord fa-lg discord m-r-20"></i><a href="#">Discord</a>
+                        <i class="fab fa-discord fa-lg discord m-r-20"></i><a href="https://discord.gg/CEVbh7w" target="_blank">Discord</a>
                     </p>
                 </div>
                 
                 <div class="column is-two-fifths m-r-10">
                     <p class="subtitle is-4">
-                        <i class="fab fa-telegram fa-lg telegram m-r-20"></i><a href="#">Telegram</a>
+                        <i class="fab fa-telegram fa-lg telegram m-r-20"></i><a href="https://t.me/joinchat/FOidRhQE5qyC8vYs49FSTw" target="_blank">Telegram</a>
                     </p>
                 </div>
                 <div class="column is-one-third"></div>
