Update edit profile

--- a/views/hirer/editProfile.ejs
+++ b/views/hirer/editProfile.ejs
@@ -37,7 +37,8 @@
                 </span>
             </div>
         </div>
-        
+        <hr class="m-t-30">
+        <p class="has-text-grey is-size-6 m-b-10">Please enter your social profiles below. Only those entered will be shown.</p>
         <div class="field">
             <label class="label">Github</label>
             <div class="control has-icons-left has-icons-right">
@@ -90,13 +91,13 @@
         <div class="field m-t-10">
             <label class="label">Twitter</label>
             <div class="control has-icons-left has-icons-right">
-                <input class="input" type="text" placeholder="Add your Twitter profile url">
+                <input class="input" type="text" placeholder="Add your company Twitter profile url">
                 <span class="icon is-small is-left">
                 <i class="fab fa-twitter"></i>
                 </span>
             </div>
         </div>
-
+        <hr class="m-t-30">
         <div class="field">
             <label class="label">About Your Company</label>
             <div class="control">
