--- a/views/candidate/editProfile.ejs
+++ b/views/candidate/editProfile.ejs
@@ -37,6 +37,9 @@
                     </span>
                 </div>
             </div>
+
+            <hr class="m-t-30">
+            <p class="has-text-grey is-size-6 m-b-10">Please enter your social profiles below. Only those entered will be shown.</p>
     
             <div class="field">
                 <label class="label">Resume</label>
@@ -95,7 +98,7 @@
                 </div>
             </div>
     
-    
+            <hr class="m-t-30">
             <div class="field">
                 <label class="label">Short Intro</label>
                 <div class="control">
