--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,8 @@
             <div class="columns is-mobile">
                 <div class="column is-three-quarters p-l-75 p-r-20">
                     <div>
-                        <h1 class="title is-1 index-h1">Job Board Site Title</h1>
                         <p class="subtitle is-4 m-t-50">
-                            👋 Our mission is to help people new to tech in to their first jobs. Our partner companies are newbie-friendly so
+                            Our mission is to help people new to tech in to their first jobs. Our partner companies are newbie-friendly so
                             will be great in helping you candidates grow in their first role 🎉.
                         </p>
                     </div> <!-- intro-->
